Revert "fix code alignment in webview"
This reverts commit eb97502301448e009ef73b7d813d3d6fd212855f.

--- a/styles/designs/webview/parts/_code-components.scss
+++ b/styles/designs/webview/parts/_code-components.scss
@@ -63,7 +63,6 @@ $CodeSnippet__LineNumbers--Code: (
     _properties: (
       font-size: 1.2rem,
       font-family: enum('ValueSet:::OPTIONAL'),
-      padding-left: 0.5rem,
-      text-align:left
+      padding-left: 0.5rem
     )
 );
