--- a/styles/output/webview-generic.css
+++ b/styles/output/webview-generic.css
@@ -2025,7 +2025,6 @@ blockquote {
 .hljs-ln-numbers {
   font-size: 1.2rem;
   padding-left: 0.5rem;
-  text-align: left;
 }
 
 .hljs-ln-code {
@@ -2039,7 +2038,6 @@ blockquote {
   font-size: 1.2rem;
   font-family: Courier Prime, monospace;
   padding-left: 0.5rem;
-  text-align: left;
 }
 
 .primary-function, .secondary-function {
